2003-02-02  Monte Ohrt  <monte@ispi.net>

    * Smarty.class.php
      docs/html.dsl
      docs/php.dsl:
      fix version number

    * (Smarty_2_4_0)
      Config_File.class.php
      NEWS
      README
      RELEASE_NOTES
      Smarty.class.php
      Smarty_Compiler.class.php
      docs/appendixes.sgml
      docs/designers.sgml
      docs/programmers.sgml:
      update Smarty version numbers

2003-01-30  Monte Ohrt  <monte@ispi.net>

    * NEWS
      Smarty_Compiler.class.php
      TODO:
      fix order of php tag comparisons

    * NEWS
      Smarty_Compiler.class.php:
      fix known php tag handling problems

2003-01-29  Monte Ohrt  <monte@ispi.net>

    * Smarty.class.php
      Smarty_Compiler.class.php:
      change comments to phpdoc style

2003-01-28  Monte Ohrt  <monte@ispi.net>

    * Smarty.class.php
      docs/programmers.sgml:
      make separate var for compiler file

    * plugins/function.fetch.php:
      fix error call

2003-01-25  Monte Ohrt  <monte@ispi.net>

    * Smarty.class.php
      Smarty_Compiler.class.php:
      add support for restriction to registered methods

    * plugins/outputfilter.trimwhitespace.php:
      update with textarea support

2003-01-24  Monte Ohrt  <monte@ispi.net>

    * Smarty_Compiler.class.php:
      fix compiling problem with {foreach} tags

    * Smarty.class.php
      Smarty_Compiler.class.php:
      put objects in own array, add object param format support, change
      object syntax from foo.bar to foo->bar

2003-01-23  Monte Ohrt  <monte@ispi.net>

    * NEWS
      Smarty.class.php
      Smarty_Compiler.class.php:
      add support for object registration

2003-01-22  Monte Ohrt  <monte@ispi.net>

    * Smarty.class.php:
      add file & line number of calling error to error message

2003-01-21  Monte Ohrt  <monte@ispi.net>

    * Smarty_Compiler.class.php:
      put php style object syntax back in

2003-01-20  Monte Ohrt  <monte@ispi.net>

    * Smarty.class.php: